fixed order tracking overflow

--- a/ordertracking.css
+++ b/ordertracking.css
@@ -3,12 +3,14 @@
 *{
     color: white;
     font-family: Poppins,serif;
+    
 }
 
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .background{
